Make MethodSignature.Parameter a record
This is a simple interface, turn it into a record, making cutting down
on the ceremony.

Change-Id: I03f56843e304228416621f60be9b756d648f5239
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>